// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerDotted matches the snapshot 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#fff",
      "overflow": "visible",
      "width": "100px",
    }
  }
  viewBox="0 0 65 66"
>
  <circle
    cx={54.9545}
    cy={13.099}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite",
      }
    }
  />
  <circle
    cx={62.0454}
    cy={33.19}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 1s infinite",
      }
    }
  />
  <circle
    cx={54.9545}
    cy={53.281}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 2s infinite",
      }
    }
  />
  <circle
    cx={32.5}
    cy={62.7355}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 3s infinite",
      }
    }
  />
  <circle
    cx={10.0454}
    cy={53.281}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 4s infinite",
      }
    }
  />
  <circle
    cx={2.95455}
    cy={33.19}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 5s infinite",
      }
    }
  />
  <circle
    cx={10.0454}
    cy={13.099}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 6s infinite",
      }
    }
  />
  <circle
    cx={32.5}
    cy={3.64461}
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 7s infinite",
      }
    }
  />
  <circle
    cx="33.0911"
    cy="33.7809"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-center 20s ease-out infinite",
        "transformOrigin": "center",
      }
    }
  />
</svg>
`;

exports[`SpinnerDotted matches the snapshot with default props 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#38ad48",
      "overflow": "visible",
      "width": "50px",
    }
  }
  viewBox="0 0 65 66"
>
  <circle
    cx={54.9545}
    cy={13.099}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite",
      }
    }
  />
  <circle
    cx={62.0454}
    cy={33.19}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.1s infinite",
      }
    }
  />
  <circle
    cx={54.9545}
    cy={53.281}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.2s infinite",
      }
    }
  />
  <circle
    cx={32.5}
    cy={62.7355}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.30000000000000004s infinite",
      }
    }
  />
  <circle
    cx={10.0454}
    cy={53.281}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.4s infinite",
      }
    }
  />
  <circle
    cx={2.95455}
    cy={33.19}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.5s infinite",
      }
    }
  />
  <circle
    cx={10.0454}
    cy={13.099}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.6000000000000001s infinite",
      }
    }
  />
  <circle
    cx={32.5}
    cy={3.64461}
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.7000000000000001s infinite",
      }
    }
  />
  <circle
    cx="33.0911"
    cy="33.7809"
    fill="currentColor"
    r={6}
    style={
      Object {
        "animation": "spinners-react-dotted-center 2s ease-out infinite",
        "transformOrigin": "center",
      }
    }
  />
</svg>
`;
